examples/error-codes/undefined/UB-EEC1-bad.output
Error: UB-EEC1
Description: variably modified types in a conditional expression with unequal size expressions.
Type: Undefined behavior.
See also: C11 sec. 6.7.6.1:6
  at main(UB-EEC1-bad.c:6)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
